version/0.34/_sources/api/solver/_autosummary/settings/surfaces_1.rst.txt
:orphan:

.. _surfaces_1:

surfaces
========

.. autoclass:: ansys.fluent.core.generated.solver.settings_252.surfaces_1
    :show-inheritance:

.. rubric:: Included in:

======================================================================   ===============================================================================================================================

Parent                                                                                                                                                                                           Summary

======================================================================   ===============================================================================================================================
:ref:`cgns <cgns>`                                                                                                                                                                    Write a CGNS file.

:ref:`dx <dx>`                                                                                                                                                   Write an IBM Data Explorer format file.

:ref:`ensight_gold_parallel_surfaces <ensight_gold_parallel_surfaces>`       Write EnSight Gold geometry, velocity and scalar files for surfaces. Fluent will write files suitable for EnSight Parallel.

:ref:`fieldview_unstruct_surfaces <fieldview_unstruct_surfaces>`                                                                                      Write a Fieldview unstructured surface mesh, data.

:ref:`nastran <nastran>`                                                                                                                                                           Write a NASTRAN file.

:ref:`patran_neutral <patran_neutral>`                                                                                                                                      Write a PATRAN neutral file.

:ref:`tecplot <tecplot>`                                                                                                                                                Write a Tecplot+3DV format file.

:ref:`projected_surface_area <projected_surface_area>`                                                                             Print total area of the projection of a group of surfaces to a plane.

======================================================================   ===============================================================================================================================

